# FaceDetection

./: .gitignore  CMakeLists.txt  README.md  make_env.sh
src/: Detector.cpp  Detector.h  FaceDetection.cpp  MoveObject.cpp  MoveObject.h  Pedestrian.cpp  Pedestrian.h
